--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,92 +2,111 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Securify – Agent Verification</title>
-
+    <title>Securify | Agent Verification</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f6f8;
-            text-align: center;
-            padding-top: 50px;
+            background: #0f172a;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            color: #fff;
         }
 
-        .card {
-            background: white;
+        .login-box {
+            background: #1e293b;
+            padding: 30px;
+            border-radius: 10px;
             width: 350px;
-            margin: auto;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 20px rgba(0,0,0,0.4);
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        input, button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 12px;
+            border-radius: 5px;
+            border: none;
         }
 
         input {
-            width: 90%;
-            padding: 10px;
-            margin-top: 10px;
+            background: #334155;
+            color: #fff;
         }
 
         button {
-            margin-top: 15px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            background: #22c55e;
+            color: #000;
+            font-weight: bold;
             cursor: pointer;
         }
 
         button:hover {
-            background-color: #0056b3;
+            background: #16a34a;
         }
 
         #result {
-            margin-top: 20px;
+            margin-top: 15px;
+            text-align: center;
             font-weight: bold;
         }
     </style>
 </head>
-
 <body>
 
-    <div class="card">
-        <h2>Securify</h2>
-        <p>Agent Identity Verification</p>
+<div class="login-box">
+    <h2>Agent Verification</h2>
 
-        <input type="text" id="agentId" placeholder="Enter Agent ID (e.g. AG001)">
-        <br>
-        <button onclick="verifyAgent()">Verify Agent</button>
+    <input type="text" id="agent_id" placeholder="Enter Agent ID (e.g. AG001)">
+    <input type="file" id="image">
 
-        <p id="result"></p>
-    </div>
+    <button onclick="verify()">Verify Identity</button>
 
-    <script>
-        function verifyAgent() {
-            const agentId = document.getElementById("agentId").value;
+    <div id="result"></div>
+</div>
 
-            fetch("http://127.0.0.1:5000/verify", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ agent_id: agentId })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.verified) {
-                    document.getElementById("result").innerText =
-                        "✅ Agent Verified (Risk: Low)";
-                } else {
-                    document.getElementById("result").innerText =
-                        "❌ Agent Not Verified (High Risk)";
-                }
-            })
-            .catch(error => {
-                document.getElementById("result").innerText =
-                    "⚠️ Backend not running";
-            });
+<script>
+async function verify() {
+    const agentId = document.getElementById("agent_id").value;
+    const image = document.getElementById("image").files[0];
+    const resultDiv = document.getElementById("result");
+
+    if (!agentId || !image) {
+        resultDiv.innerText = "Please enter Agent ID and upload image";
+        return;
+    }
+
+    const formData = new FormData();
+    formData.append("agent_id", agentId);
+    formData.append("image", image);
+
+    try {
+        const response = await fetch("http://127.0.0.1:5000/verify", {
+            method: "POST",
+            body: formData
+        });
+
+        const data = await response.json();
+
+        if (data.verified) {
+            resultDiv.style.color = "lightgreen";
+            resultDiv.innerText = "✅ Verification Successful";
+        } else {
+            resultDiv.style.color = "red";
+            resultDiv.innerText = "❌ Verification Failed";
         }
-    </script>
+    } catch (error) {
+        resultDiv.innerText = "Backend not running";
+    }
+}
+</script>
 
 </body>
 </html>
