--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="main-content" style="max-width: 400px; margin: 50px auto;">
-        <h1>Securify Access</h1>
+        <h1>Securify Login</h1>
 
         <div class="card">
             <!-- Login Form -->
